<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/github_login"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/font_size_header_l"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pic_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/black_cat2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/repositories_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_l"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/like_image_view"
            tools:listitem="@layout/item_repositories" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/counter_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xxs"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/counter_text"
            app:layout_constraintStart_toEndOf="@+id/like_image_view"
            app:layout_constraintTop_toTopOf="@+id/like_image_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/like_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:contentDescription="@string/like_description_fab"
            android:src="@drawable/ic_baseline_pets_24"
            android:tint="@color/secondaryColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pic_image_view" />

        <ToggleButton
            android:id="@+id/like_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_favorite_border_24"
            android:backgroundTint="@color/secondaryColor"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loading_layout"
            app:layout_constraintWidth_percent="0.15" />

        <include
            android:id="@+id/loading_layout"
            layout="@layout/base_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>